--- a/CustomRPC/MainForm.resx
+++ b/CustomRPC/MainForm.resx
@@ -218,6 +218,13 @@
     <value>English</value>
     <comment>@Invariant</comment>
   </data>
+  <data name="frToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>180, 22</value>
+  </data>
+  <data name="frToolStripMenuItem.Text" xml:space="preserve">
+    <value>Français</value>
+    <comment>@Invariant</comment>
+  </data>
   <data name="heToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>180, 22</value>
   </data>
@@ -462,6 +469,30 @@
   </data>
   <data name="maximmax42ToolStripMenuItem.Text" xml:space="preserve">
     <value>maximmax42</value>
+    <comment>@Invariant</comment>
+  </data>
+  <data name="vietnameseToolStripMenuItem.Enabled" type="System.Boolean, mscorlib">
+    <value>False</value>
+  </data>
+  <data name="vietnameseToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>246, 22</value>
+  </data>
+  <data name="vietnameseToolStripMenuItem.Text" xml:space="preserve">
+    <value>Tiếng Việt (Vietnamese)</value>
+    <comment>@Invariant</comment>
+  </data>
+  <data name="MykmToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>246, 22</value>
+  </data>
+  <data name="MykmToolStripMenuItem.Text" xml:space="preserve">
+    <value>Mykm</value>
+    <comment>@Invariant</comment>
+  </data>
+  <data name="Phnthnhnm0612toolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>246, 22</value>
+  </data>
+  <data name="Phnthnhnm0612toolStripMenuItem.Text" xml:space="preserve">
+    <value>Phnthnhnm0612</value>
     <comment>@Invariant</comment>
   </data>
   <data name="toolStripSeparatorHelp2.Size" type="System.Drawing.Size, System.Drawing">
@@ -1766,28 +1797,21 @@ To take effect, both fields should be more than 0.</value>
   <data name="&gt;&gt;textBoxID.ZOrder" xml:space="preserve">
     <value>36</value>
   </data>
-  <data name="vietnameseToolStripMenuItem.Enabled" type="System.Boolean, mscorlib">
+  <data name="frenchToolStripMenuItem.Enabled" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
-  <data name="vietnameseToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+  <data name="frenchToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>246, 22</value>
   </data>
-  <data name="vietnameseToolStripMenuItem.Text" xml:space="preserve">
-    <value>Tiếng Việt (Vietnamese)</value>
+  <data name="frenchToolStripMenuItem.Text" xml:space="preserve">
+    <value>Français (French)</value>
     <comment>@Invariant</comment>
   </data>
-  <data name="Phnthnhnm0612toolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+  <data name="nicolasToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>246, 22</value>
   </data>
-  <data name="Phnthnhnm0612toolStripMenuItem.Text" xml:space="preserve">
-    <value>Phnthnhnm0612</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="MykmToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>246, 22</value>
-  </data>
-  <data name="MykmToolStripMenuItem.Text" xml:space="preserve">
-    <value>Mykm</value>
+  <data name="nicolasToolStripMenuItem.Text" xml:space="preserve">
+    <value>Nicolas. sarrazin. fr</value>
     <comment>@Invariant</comment>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -1968,6 +1992,12 @@ To take effect, both fields should be more than 0.</value>
   <data name="&gt;&gt;ruToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="&gt;&gt;viToolStripMenuItem.Name" xml:space="preserve">
+    <value>viToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;viToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="&gt;&gt;helpToolStripMenuItem.Name" xml:space="preserve">
     <value>helpToolStripMenuItem</value>
   </data>
@@ -2064,6 +2094,24 @@ To take effect, both fields should be more than 0.</value>
   <data name="&gt;&gt;maximmax42ToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="&gt;&gt;vietnameseToolStripMenuItem.Name" xml:space="preserve">
+    <value>vietnameseToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;vietnameseToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;MykmToolStripMenuItem.Name" xml:space="preserve">
+    <value>MykmToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;MykmToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;Phnthnhnm0612toolStripMenuItem.Name" xml:space="preserve">
+    <value>Phnthnhnm0612toolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;Phnthnhnm0612toolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="&gt;&gt;toolStripSeparatorHelp2.Name" xml:space="preserve">
     <value>toolStripSeparatorHelp2</value>
   </data>
@@ -2100,28 +2148,22 @@ To take effect, both fields should be more than 0.</value>
   <data name="&gt;&gt;toolStripStatusLabelStatus.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripStatusLabel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;viToolStripMenuItem.Name" xml:space="preserve">
-    <value>viToolStripMenuItem</value>
+  <data name="&gt;&gt;frToolStripMenuItem.Name" xml:space="preserve">
+    <value>frToolStripMenuItem</value>
   </data>
-  <data name="&gt;&gt;viToolStripMenuItem.Type" xml:space="preserve">
+  <data name="&gt;&gt;frToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;vietnameseToolStripMenuItem.Name" xml:space="preserve">
-    <value>vietnameseToolStripMenuItem</value>
+  <data name="&gt;&gt;frenchToolStripMenuItem.Name" xml:space="preserve">
+    <value>frenchToolStripMenuItem</value>
   </data>
-  <data name="&gt;&gt;vietnameseToolStripMenuItem.Type" xml:space="preserve">
+  <data name="&gt;&gt;frenchToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;Phnthnhnm0612toolStripMenuItem.Name" xml:space="preserve">
-    <value>Phnthnhnm0612toolStripMenuItem</value>
+  <data name="&gt;&gt;nicolasToolStripMenuItem.Name" xml:space="preserve">
+    <value>nicolasToolStripMenuItem</value>
   </data>
-  <data name="&gt;&gt;Phnthnhnm0612toolStripMenuItem.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;MykmToolStripMenuItem.Name" xml:space="preserve">
-    <value>MykmToolStripMenuItem</value>
-  </data>
-  <data name="&gt;&gt;MykmToolStripMenuItem.Type" xml:space="preserve">
+  <data name="&gt;&gt;nicolasToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
